# datenstrom

./: .gitignore  CMakeLists.txt  README.md
linux/dsutil/: CMakeLists.txt  endian.cpp  env.cpp  env.h  filesys.cpp  filesys.h  module.cpp  module.h  string.cpp  string.h  time.cpp  time.h
linux/mssql/: CMakeLists.txt  connection.cpp  connection.h  enroll.cpp  error.h  named_statement.cpp  positional_statement.h  rowset.cpp  rowset.h  statement_base.cpp  statement_base.h  types.cpp  types.h
linux/mssql/test/: CMakeLists.txt  mssql_sql_module.cpp
src/: CMakeLists.txt
src/csv/: CMakeLists.txt  csv.h  istream.cpp  ostream.cpp
src/csv/test/: CMakeLists.txt  test_csv.cpp
src/db/: CMakeLists.txt  connect_params.h  connect_string.cpp  connect_string.h  connection.cpp  connection.h  context.cpp  context.h  database.cpp  database.h  enroll.cpp  enroll.h  factory.cpp  factory.h  factory_helper.h  impl.h  impl_traits.h  parameter.cpp  parameter.h  result.cpp  result.h  row.cpp  row.h  rowset.cpp  rowset.h  simple_result.cpp  simple_result.h  simple_rowset.cpp  simple_rowset.h  sql_map.cpp  sql_map.h  sql_module_harness.cpp  sql_module_harness.h  statement.cpp  statement.h  transaction.cpp  transaction.h  transactional.cpp  transactional.h
src/db/test/: CMakeLists.txt  init_module_paths.cpp  init_module_paths.h  test_connect_string.cpp  test_context.cpp  test_context.h  test_db.cpp  test_db.h  test_factory.cpp  test_list.cpp  test_mod_blob.cpp  test_mod_blob.h  test_mod_config.h  test_mod_connection.cpp  test_mod_connection.h  test_mod_context.cpp  test_mod_context.h  test_mod_list.cpp  test_mod_list.h  test_mod_parameter.cpp  test_mod_parameter.h  test_mod_rowset.cpp  test_mod_rowset.h  test_mod_savepoint.cpp  test_mod_savepoint.h  test_mod_statement.cpp  test_mod_statement.h  test_mod_stdserial.cpp  test_mod_stdserial.h  test_mod_transaction.cpp  test_mod_transaction.h  test_simple_result.cpp  test_simple_rowset.cpp  test_transaction.cpp
src/ds/: CMakeLists.txt  ds.cpp  ds.h  factory.h
src/ds/test/: CMakeLists.txt  test_ds.cpp  test_factory.cpp
src/dsutil/: CMakeLists.txt  connect_params.h  connect_string.cpp  connect_string.h  parameter.cpp  timestamp.cpp  timestamp.h  url_encode.cpp  url_encode.h
src/dsutil/test/: CMakeLists.txt  null_module.cpp  test_connect_string.cpp  test_env.cpp  test_filesys.cpp  test_module.cpp  test_string.cpp  test_time.cpp  test_url_encode.cpp
src/firebird/: CMakeLists.txt  connection.cpp  connection.h  enroll.cpp  error.cpp  error.h  guard.cpp  guard.h  lines.cpp  lines.h  named_statement.cpp  named_statement.h  parameter_enum.cpp  parameter_enum.h  positional_statement.cpp  positional_statement.h  result.cpp  result.h  rowset.cpp  rowset.h  statement_base.cpp  statement_base.h  statement_enum.cpp  statement_enum.h  statements.cpp  statements.h  transactional.cpp  transactional.h  types.cpp  types.h
src/firebird/test/: CMakeLists.txt  firebird_sql_module.cpp  firebird_test_data.cpp  firebird_test_data.h  firebird_test_module.cpp  test_firebird.cpp  test_firebird_blob.cpp  test_firebird_context.cpp  test_firebird_db.cpp  test_firebird_list.cpp  test_firebird_parameter.cpp  test_firebird_transaction.cpp
src/mssql/: CMakeLists.txt  connection.cpp  connection.h  enroll.cpp  error.cpp  error.h  named_statement.cpp  named_statement.h  rowset.cpp  rowset.h  statement_base.cpp  statement_base.h  statement_enum.cpp  statement_enum.h  types.cpp  types.h
src/mssql/test/: CMakeLists.txt  mssql_sql_module.cpp  test_mssql.cpp
src/mysql/: CMakeLists.txt  connection.cpp  connection.h  constructor.cpp  constructor.h  database.cpp  database.h  enroll.cpp  error.cpp  error.h  impl_traits.cpp  impl_traits.h  named_statement.cpp  named_statement.h  positional_statement.cpp  positional_statement.h  prepared_row.cpp  prepared_row.h  prepared_statement.cpp  prepared_statement.h  result.cpp  result.h  row.cpp  row.h  rowset.cpp  rowset.h  statement.cpp  statement.h  statement_base.cpp  statement_base.h  types.h
src/mysql/test/: CMakeLists.txt  mysql_sql_module.cpp  mysql_test_data.cpp  mysql_test_data.h  mysql_test_module.cpp  test_mysql.cpp  test_mysql_blob.cpp  test_mysql_context.cpp  test_mysql_db.cpp  test_mysql_factory.cpp  test_mysql_list.cpp  test_mysql_parameter.cpp  test_mysql_transaction.cpp
src/postgresql/: CMakeLists.txt  connection.cpp  connection.h  enroll.cpp  error.cpp  error.h  named_statement.cpp  named_statement.h  positional_statement.cpp  positional_statement.h  rowset.cpp  rowset.h  statement_base.cpp  statement_base.h  types.cpp  types.h
src/postgresql/test/: CMakeLists.txt  postgresql_sql_module.cpp  test_postgresql.cpp
src/sqlite/: CMakeLists.txt  connection.cpp  connection.h  constructor.cpp  constructor.h  database.cpp  database.h  enroll.cpp  error.cpp  error.h  impl_traits.cpp  impl_traits.h  result.cpp  result.h  row.cpp  row.h  rowset.cpp  rowset.h  statement.cpp  statement.h  types.h
src/sqlite/test/: CMakeLists.txt  sqlite_sql_module.cpp  sqlite_test_data.cpp  sqlite_test_data.h  sqlite_test_module.cpp  test_data.cpp  test_data.h  test_sqlite.cpp  test_sqlite_blob.cpp  test_sqlite_context.cpp  test_sqlite_db.cpp  test_sqlite_factory.cpp  test_sqlite_list.cpp  (+2 more)
src/std/: optional_serialise.h  tuple_serialise.h  vector_serialise.h
src/test_model/: CMakeLists.txt  object.cpp  object.h  object_serialise.cpp  object_serialise.h
src/util/: CMakeLists.txt  parameter.cpp  parameter.h  parameter_enum.cpp  parameter_enum.h
win32/dsutil/: CMakeLists.txt  endian.cpp  endian.h  env.cpp  env.h  filesys.cpp  filesys.h  module.cpp  module.h  platform.h  string.cpp  string.h  time.cpp  time.h
win32/mssql/: CMakeLists.txt  connection.cpp  connection.h  enroll.cpp  error.cpp  error.h  named_statement.cpp  named_statement.h  positional_statement.cpp  positional_statement.h  result.cpp  result.h  rowset.cpp  rowset.h  statement.h  statement_base.cpp  statement_base.h  statement_enum.cpp  statement_enum.h  types.cpp  types.h
win32/util/: CMakeLists.txt  filesys.cpp  filesys.h  module.cpp  string.cpp  time.cpp  time.h
(+83 files in other folders)
